# rust-graphql-sdl

./: Cargo.toml  README.md
src/: graphql.rs  main.rs  schema.graphql
