[package]
name = "rust-graphql-sdl"
version = "0.1.0"
authors = ["Kyle DeTella <kdetella@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1"
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.28"
juniper = "^0.14"
juniper-from-schema = "^0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"